tests/negative/test_sym_bad_type_raw.orb
fnc main () () {
    eval (sym (a:i32 ()));
};